--- a/static/scss/_masthead.scss
+++ b/static/scss/_masthead.scss
@@ -17,7 +17,7 @@ header.masthead {
     opacity: 0.5;
   }
   .page-heading,
-  .post-heading,
+  .document-heading,
   .site-heading {
     padding: 200px 0 150px;
     color: white;
@@ -46,7 +46,7 @@ header.masthead {
       }
     }
   }
-  .post-heading {
+  .document-heading {
     h1 {
       font-size: 35px;
     }
