--- a/templates/index.html
+++ b/templates/index.html
@@ -19,31 +19,31 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        {% for post in all_posts %}
-        <div class="post-preview">
-          <a href="{{ url_for('show_post', post_id=post.id) }}">
-            <h2 class="post-title">
-              {{post.title}}
+        {% for doc in all_documents %}
+        <div class="doc-preview">
+          <a href="{{ url_for('show_document', document_id=doc.id) }}">
+            <h2 class="doc-title">
+              {{doc.title}}
             </h2>
-            <h3 class="post-subtitle">
-              {{post.subtitle}}
+            <h3 class="doc-subtitle">
+              {{doc.description}}
             </h3>
           </a>
-          <p class="post-meta">Posted by
-            {{post.author.name}}
-            on {{post.date}}
+          <p class="doc-meta">doced by
+            {{doc.create_user_id.name}}
+            on {{doc.upload_date}}
             {% if current_user.id == 1: %}
-            <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
+            <a href="{{url_for('delete_doc', doc_id=doc.id) }}">✘</a>
             {% endif %}
           </p>
         </div>
         {% endfor %}
 
 
-        <!-- New Post -->
+        <!-- New doc -->
         {% if current_user.id == 1: %}
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="{{url_for('add_new_post')}}">Create New Post</a>
+          <a class="btn btn-primary float-right" href="{{url_for('add_new_doc')}}">Create New doc</a>
         </div>
         {% endif %}
       </div>
