--- a/templates/make-document.html
+++ b/templates/make-document.html
@@ -4,18 +4,18 @@
 {% block content %}
 {% include "header.html" %}
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/edit-bg.jpg')}}')">
+  <header class="masthead" style="background-image: url({{ url_for('static', filename='img/edit-bg.jpg') }}')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             {% if is_edit: %}
-            <h1>Edit Post</h1>
+            <h1>Edit Document</h1>
             {% else: %}
-            <h1>New Post</h1>
+            <h1>New Document</h1>
             {% endif %}
-            <span class="subheading">You're going to make a great blog post!</span>
+            <span class="subheading">You're going to make a great Document!</span>
           </div>
         </div>
       </div>
@@ -34,8 +34,3 @@
 
 {% include "footer.html" %}
 {% endblock %}
-
-
-
-
-
