--- a/templates/about.html
+++ b/templates/about.html
@@ -1,31 +1,15 @@
-{% include "header.html" %}
+{% extends 'base.html' %}
 
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ url_for("static", filename="img/about-bg.jpg") }}')">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
-          </div>
-        </div>
-      </div>
+{% block content %}
+<!-- Banner -->
+<section id="banner">
+	<div class="content">
+		<header>
+			<h1>About Me</h1>
+    </header>
+    <div class="content">
+      <p>Built quickly with a few rough edges.
     </div>
-  </header>
-
-  <!-- Main Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
-      </div>
-    </div>
-  </div>
-
-  <hr>
-
-  {% include "footer.html" %}
+	</div>
+</section>
+{% endblock %}
