--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,25 +1,22 @@
-{% include "header.html" %}
+{% extends 'base.html' %}
 
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/contact-bg.jpg')}}')">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1>Contact Me</h1>
-            <span class="subheading">Have questions? I have answers.</span>
-          </div>
-        </div>
-      </div>
+{% block content %}
+<!-- Banner -->
+<section id="banner">
+	<div class="content">
+		<header>
+			<h1>Contact Me</h1>
+    </header>
+    <div class="content">
+      <span class="subheading">Have questions? I have answers.</span>
+      <br/>
+      <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
     </div>
-  </header>
-
   <!-- Main Content -->
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+        
         <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
         <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
         <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
@@ -59,7 +56,5 @@
       </div>
     </div>
   </div>
-
-  <hr>
-
-  {% include "footer.html" %}
+</section>
+{% endblock %}
