--- a/templates/login.html
+++ b/templates/login.html
@@ -1,40 +1,35 @@
-{% extends 'bootstrap/base.html' %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% extends 'base.html' %}
 
 {% block content %}
-{% include "header.html" %}
-
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1484100356142-db6ab6244067?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80')">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1>Log In</h1>
-            <span class="subheading">Welcome Back!</span>
-          </div>
-        </div>
-      </div>
+<!-- Banner -->
+<section id="banner">
+	<div class="content">
+		<header>
+			<h1>Login</h1>
+    </header>
+    <div class="content">
+      <span class="subheading">Sign into your account</span>
     </div>
-  </header>
-
+  <!-- Main Content -->
   <div class="container">
     <div class="row">
 
       <div class="col-lg-8 col-md-10 mx-auto content">
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          {% for message in messages %}
-           <p>{{ message }}</p>
-          {% endfor %}
-        {% endif %}
-      {% endwith %}
-        {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+        {% with messages = get_flashed_messages() %}
+          {% if messages %}
+            {% for message in messages %}
+            <p>{{ message }}</p>
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
+        <form action="/login" method="post">
+          {{ form.csrf_token }}
+          {{ form.email.label }} {{ form.email(size=50) }}
+          {{ form.password.label }} {{ form.password(size=50) }}
+          <input type="submit" value="Login">
+        </form>
       </div>
     </div>
   </div>
-
-
-{% include "footer.html" %}
+</section>
 {% endblock %}
