--- a/templates/make-document.html
+++ b/templates/make-document.html
@@ -27,6 +27,8 @@
                 <br/>
                 {{ form.file_url.label }} {{ form.file_url }}
                 <br/>
+                {{ form.tags.label }} {{ form.tags }}
+                <br/>
                 {% if is_edit: %}
                 <input type="submit" value="Edit Document">
                 {% else: %}
