--- a/templates/register.html
+++ b/templates/register.html
@@ -16,7 +16,7 @@
 
       <div class="col-lg-8 col-md-10 mx-auto content">
         <br/>
-        <form action="/login" method="post">
+        <form action="/register" method="post">
           {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
         </form>
       </div>
