--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,18 @@
 <body class="is-preload">
   <div class="content">
     <h1>Documents</h1>
+    <section id="search" class="alt">
+      <div class="col md-6">
+        <form action="search" method="post">
+          {{ form.hidden_tag() }}
+          {{ form.csrf_token }}
+          {{ form.query(size=50) }}
+          {{ form.submit }}
+        </form>
+      </div>
+      <br/>
+    </section>
+    
       <div class="table-wrapper">
         <table>
           <thead>
@@ -11,14 +23,16 @@
               <th>Title</th>
               <th>Description</th>
               <th>Uploaded Date</th>
+              <th>Tags</th>
               <th>Actions</th>
             </tr>
           </thead>
           <tbody>
-            {% for doc in all_documents %}
+            {% for doc in documents %}
             <tr>
               <td>{{ doc.title }}</td>
               <td>{{ doc.description }}</td>
+              <td>{{ doc.tags }}</td>
               <td>{{ doc.upload_date }}</td>
               <td>
                 <div class="row gtr-uniform">
